[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://assets/light.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://SpeechWindow.tscn" type="PackedScene" id=4]
[ext_resource path="res://Options.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/p_footstep1.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/p_footstep2.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 6, 5, 8, 9, 8, 5 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Step1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
vframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 152, 73 )
texture = ExtResource( 2 )
offset = Vector2( -152, -73 )
texture_scale = 0.25
color = Color( 0.843137, 0.705882, 0.160784, 1 )
energy = 0.8

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.1, 0.1 )
limit_left = 0
limit_top = 0
limit_right = 352
limit_bottom = 640

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="SpeechWindow" parent="." instance=ExtResource( 4 )]

[node name="Options" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 3 )
anims/Move = SubResource( 5 )
anims/RESET = SubResource( 4 )

[node name="Step1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0
bus = "SFX"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
